Added link to SoCraTes Day Linz 2016

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -112,6 +112,11 @@ block content
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
                 br
                 small 27 - 30 Oct 2016, Rochegude
+            .col-sm-6
+              h5
+                +extlink('http://socrates-conference.at/', 'SoCraTes Day Linz')
+                br
+                small 29 October 2016, Linz
 
 
 
