Added country and fixed month name for SoCraTes Day Linz

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -116,7 +116,7 @@ block content
               h5
                 +extlink('http://socrates-conference.at/', 'SoCraTes Day Linz')
                 br
-                small 29 October 2016, Linz
+                small 29 Oct 2016, Linz, Austria
 
 
 
