--- a/softwerkskammer/views/googlemaps-component.jade
+++ b/softwerkskammer/views/googlemaps-component.jade
@@ -1,6 +1,6 @@
 mixin map(location, width, height)
   #map.hidden-print(style='width: #{width}; height: #{height}')
-  script(src='https://maps.googleapis.com/maps/api/js?sensor=false', type='text/javascript')
+  script(src='https://maps.googleapis.com/maps/api/js', type='text/javascript')
   script.
     $(document).ready(function () {
       var mapOptions = {
