--- a/softwerkskammer/views/formComponents.jade
+++ b/softwerkskammer/views/formComponents.jade
@@ -30,6 +30,15 @@ mixin multiselect(name, label, value, tags)
     script.
       $(#{name}).select2();
 
+mixin editableMultiselect(name, label, value, tags)
+  .form-group
+    +controlLabel(name, label)
+    select.form-control(multiple, id=name, name=name)
+      each tag in tags
+        option(selected = value.indexOf(tag) > -1) #{tag}
+    script.
+      $(#{name}).select2({tags: true});
+
 
 mixin currency(name, label, value, tooltip, placeholder, readonly)
   .form-group
