--- a/softwerkskammer/lib/site/views/index.jade
+++ b/softwerkskammer/lib/site/views/index.jade
@@ -10,6 +10,14 @@ block content
       .page-header
         h2 Softwerkskammer <br>
           small #{t('general.communities')}
+
+  .row
+    .col-md-12
+      h2 Aktuell: Der Global Day of Coderetreat am 22. Oktober 2016
+      p
+        | Hier findest Du&nbsp;
+        a(href="activities/gdcr") die meisten der Veranstaltungen im Softwerkskammer-Einzugsgebiet.
+      hr
   .row
     .col-md-6
       !=t('general.about_us_text', { postProcess: 'jade' })
