--- a/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
+++ b/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
@@ -19,5 +19,5 @@ mixin mailform(message, regionalgroups, themegroups)
           +hightextarea('markdown', t('mailsender.contents'), message.markdown)
           +checkbox('sendCopyToSelf', t('mailsender.copy_to_self'), false)
           +hidden('buttons', JSON.stringify(message.buttons))
-          input(id='successURL', type='hidden', name='successURL', value=successURL)
+          input#successURL(type='hidden', name='successURL', value=successURL)
           +submitButtons('mailsender.send')
