--- a/softwerkskammer/lib/members/views/editavatar.pug
+++ b/softwerkskammer/lib/members/views/editavatar.pug
@@ -13,7 +13,7 @@ mixin editavatar(member, returnToParticipantsListing)
   -var deleteoptions = {url: deleteURL, params: {nickname: member.nickname()}}
   +reallyDeleteModalOnly('photo.delete', deleteoptions)
   div(style='width: 200px')
-    form(id='recordForm', role='form', method='POST', action='/members/submitavatar' + '?_csrf=' + encodeURIComponent(csrf_token), enctype='multipart/form-data')
+    form#recordForm(role='form', method='POST', action='/members/submitavatar' + '?_csrf=' + encodeURIComponent(csrf_token), enctype='multipart/form-data')
       +hidden('returnToParticipantsListing', returnToParticipantsListing)
       #selectFileButton
         img(src=member.avatarUrl())
