enabling more puglint options

--- a/softwerkskammer/lib/activities/views/get.pug
+++ b/softwerkskammer/lib/activities/views/get.pug
@@ -12,10 +12,10 @@ block opengraph
   meta(property='og:title', content=activity.title())
 
 block content
-  #addOn(tabindex='-1').modal.fade
+  #addOn.modal.fade(tabindex='-1')
     .modal-dialog
       .modal-content
-  #payment(tabindex='-1').modal.fade
+  #payment.modal.fade(tabindex='-1')
     .modal-dialog.modal-lg
       .modal-content
   .row
