--- a/softwerkskammer/lib/wiki/views/get.pug
+++ b/softwerkskammer/lib/wiki/views/get.pug
@@ -5,7 +5,7 @@ block title
   | #{pageName} : #{subdir}
 
 block content
-  #renameDialog(tabindex='-1').modal.fade
+  #renameDialog.modal.fade(tabindex='-1')
     .modal-dialog
       .modal-content
         .modal-header
