--- a/softwerkskammer/lib/dashboard/views/index.pug
+++ b/softwerkskammer/lib/dashboard/views/index.pug
@@ -71,7 +71,7 @@ mixin wikichangesOrBlogs(items, panelid, prefix, title)
       ul.list-unstyled
         each item in items
           li.dashboard-line
-            div(id=item.dialogId(), tabindex='-1').modal.fade.bs-modal-lg
+            .modal.fade.bs-modal-lg(id=item.dialogId(), tabindex='-1')
               .modal-dialog.modal-lg
                 .modal-content
             a(data-toggle='modal', data-target='#' + item.dialogId(), href=item.dialogUrl()) #{item.pureName()}
