--- a/softwerkskammer/lib/wiki/views/history.pug
+++ b/softwerkskammer/lib/wiki/views/history.pug
@@ -45,7 +45,7 @@ block content
     .btn-group.pull-right
       a.btn.btn-default(href='javascript:history.back()', type='cancel') #{t('general.back')}
       if (accessrights.isRegistered())
-        button#rev-compare(data-pageName=pageName, data-subdir=subdir).btn.btn-default
+        button#rev-compare.btn.btn-default(data-pageName=pageName, data-subdir=subdir)
           i.fa.fa-stethoscope.fa-fw
           | &nbsp; #{t('general.compare')}…
     h2 #{subdir}/#{pageName}
