--- a/softwerkskammer/lib/site/views/index.pug
+++ b/softwerkskammer/lib/site/views/index.pug
@@ -16,7 +16,7 @@ block content
       h2 Aktuell: Der Global Day of Coderetreat am 22. Oktober 2016
       p
         | Hier findest Du&nbsp;
-        a(href="activities/gdcr") die meisten der Veranstaltungen im Softwerkskammer-Einzugsgebiet.
+        a(href='activities/gdcr') die meisten der Veranstaltungen im Softwerkskammer-Einzugsgebiet.
       hr
   .row
     .col-md-6
