--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -79,7 +79,7 @@ block content
 
       h4 Backend Rendering
       dl.dl-horizontal
-        +defItem('pug', 'https://pugjs.org', 'Template Engine')
+        +defItem('Pug', 'https://pugjs.org', 'Template Engine')
         +defItem('Marked', 'https://github.com/chjj/marked', 'Markdown nach HTML')
         +defItem('Syntaxhighlighter', 'https://github.com/thlorenz/node-syntaxhighlighter', 'Syntax Highlighting in markdown')
         +defItem('iconv-lite', 'https://github.com/ashtuchkin/iconv-lite', 'Text Recoding')
@@ -92,6 +92,7 @@ block content
       dl.dl-horizontal
         +defItem('Async', 'https://github.com/caolan/async', 'Funktionale Erweiterungen, asynchron')
         +defItem('Lo-Dash "_"', 'http://lodash.com', 'Funktionale Erweiterungen, synchron')
+        +defItem('Ramda', 'http://ramdajs.com', '"A practical functional library for Javascript programmers."')
         +defItem('"_s"', 'http://epeli.github.com/underscore.string/', 'String Erweiterungen')
         +defItem('Moment', 'http://momentjs.com/', 'Datum und Uhrzeit leicht gemacht')
 
@@ -99,6 +100,7 @@ block content
       dl.dl-horizontal
         +defItem('Grunt', 'http://gruntjs.com', 'Build-Runner')
         +defItem('ESLint (grunt)', 'https://github.com/sindresorhus/grunt-eslint', 'Grunt Integration für ESLint')
+        +defItem('Puglint (grunt)', 'https://github.com/mrmlnc/grunt-puglint', 'Grunt Integration für pug-lint')
         +defItem('Grunt Less', 'https://github.com/gruntjs/grunt-contrib-less', 'Grunt Integration für LESS Compilierung')
         +defItem('Grunt Uglify', 'https://github.com/gruntjs/grunt-contrib-uglify', 'Grunt Minifizierung für JS-Files')
         +defItem('Grunt Mocha Istanbul', 'https://github.com/pocesar/grunt-mocha-istanbul', 'Mocha Tests im Grunt + Coverage')
@@ -107,6 +109,7 @@ block content
         +defItem('Request', 'http://github.com/mikeal/request.git', 'Für Integrationstests')
         +defItem('Supertest', 'https://github.com/visionmedia/supertest', 'Einfache Integrationstests')
         +defItem('ESLint', 'http://eslint.org/', 'Metrik/Qualitäts/Style Checker')
+        +defItem('Pug-Lint', 'https://github.com/pugjs/pug-lint', 'Problem- and Style Checker für pug')
         +defItem('Mocha', 'http://visionmedia.github.io/mocha/', 'Test Framework')
         +defItem('Karma', 'http://karma-runner.github.io/', 'Test runner für Frontendtests')
         +defItem('Karma-Mocha', 'https://github.com/karma-runner/karma-mocha', 'Mocha in Frontendtests benutzen')
