Adding 2016 to history. - yearnumbers are colored now, too

--- a/socrates/lib/site/views/history.pug
+++ b/socrates/lib/site/views/history.pug
@@ -49,7 +49,7 @@ block content
         |, and many, many more. We had around 10-20 participants from outside Germany with us at the first SoCraTes. All the tales
         |  they told us on how they were running things in London, Israel, Finland, you-name-it engaged us. It felt good to be around so
         |  many like-minded folks, and receive outside inspiration.
-      h3 2011 #{''}
+      h3(style='color:darkred') 2011 #{''}
         small(style='color:darkred') First year
       p.
         The first SoCraTes - Software Craftsmanship and Testing (un)conference - was a success. We had some track sessions back 
@@ -58,7 +58,7 @@ block content
         are a bunch of other folks around me that come from a similar location as I do. That was also when we decided that 
         we needed to keep that spirit going. We talked to folks in our neighborhood, and found soon some company for local
         user groups to keep on spreading the word.
-      h3 2012 #{''}
+      h3(style='color:darkgreen') 2012 #{''}
         small(style='color:darkgreen') Second year 
       p
         | One year later, we came back for SoCraTes 2012. Since the first conference we had established 10 user groups all 
@@ -78,7 +78,7 @@ block content
         focused on two full days of Open Space. That provided the freedom necessary. In the end, we decided to run the conference
         again in Rückersbach, but have it organized by a different group of people. We explicitly decided to pass over the organizing
         responsibility to one of the local groups from year to year.
-      h3 2013 #{''}
+      h3(style='color:blue') 2013 #{''}
         small(style='color:blue') Third year
       p.
         In 2013, the limited amount of beds became a problem.
@@ -91,7 +91,7 @@ block content
       p.
         We discussed again what to do about it, and asked the organizers to
         seek a location that may scale up to 200 participants.
-      h3 2014 #{''}
+      h3(style='color:grey') 2014 #{''}
         small(style='color:grey') Fourth year
       p.
         This year we switched to a new location. The choice fell on Soltau, a
@@ -111,8 +111,8 @@ block content
         Discussions tended to last deep into the night or even until the sun
         would declare the start of a new day. On the way back to normal lives
         everybody seemed to promise to meet again at the same place next year.
-      h3 2015 #{''}
-        small(style='color:darkblue') Fifth year
+      h3(style='color:#5d4cdc') 2015 #{''}
+        small(style='color:#5d4cdc') Fifth year
       p.
         This was the second year in Soltau. If possible, the location felt even
         more inviting this year - it was familiar by now. We had 160
@@ -126,3 +126,9 @@ block content
         +extlink('https://www.youtube.com/watch?v=8XpB30AWE4Y', 'song')
         |  that shows the SoCraTes spirit. The only thing left to say is: "see
         | you next year in Soltau".
+      h3(style='color:#b57b9a') 2016 #{''}
+        small(style='color:#b57b9a') Sixth year
+      p.
+        The first year in which we could have the Soltau location exclusively.
+        This pushed the atmosphere to a new level of intimacy. We have been almost
+        240 people attending. 
