Added a link to next year's conference calendar.

--- a/softwerkskammer/views/layout.pug
+++ b/softwerkskammer/views/layout.pug
@@ -17,3 +17,8 @@ block specific
           br
           small.
             #{t('general.events_in_europe_desc')}
+        h4
+          a(href='/wiki/events/2017') #{t('general.events_in_europe')} 2017
+          br
+          small.
+            #{t('general.events_in_europe_desc')}
