Integrate the dashboard into the main menu

--- a/softwerkskammer/lib/dashboard/views/index.pug
+++ b/softwerkskammer/lib/dashboard/views/index.pug
@@ -17,7 +17,7 @@ block content
     .col-sm-6
       .panel.panel-default
         .panel-heading
-          b Dashboard
+          b #{t('dashboard.dashboard')}
         .panel-body
           !=t('dashboard.description', { postProcess: 'pug' })
   +my_groups
