--- a/softwerkskammer/lib/dashboard/views/indexJson.pug
+++ b/softwerkskammer/lib/dashboard/views/indexJson.pug
@@ -16,7 +16,7 @@ block content
     .col-sm-6
       .panel.panel-default
         .panel-heading
-          b Dashboard
+          b #{t('dashboard.dashboard')}
         .panel-body
           !=t('dashboard.description', { postProcess: 'pug' })
   +my_groups
