--- a/softwerkskammer/lib/members/views/memberlist-mixin.pug
+++ b/softwerkskammer/lib/members/views/memberlist-mixin.pug
@@ -8,7 +8,7 @@ mixin memberlist(members, organizers)
         dt: .member
           +linkedMember(member.nickname())
           if (member.hasImage())
-            | &nbsp; <a href='#' rel='tooltip' data-content=member.nickname() title='<div style="height: 128px;"><img src=#{member.avatarUrl(128)} width="128" height="128"/></div>' >
+            | &nbsp; <a href='#' rel='tooltip' data-content=#{member.nickname()} title='<div style="height: 128px;"><img src=#{member.avatarUrl(128)} width="128" height="128"/></div>' >
             img.hidden-print(src=member.inlineAvatar(), width='16', height='16')
             | </a>
         dd #{member.firstname()} #{member.lastname()}
