--- a/softwerkskammer/lib/dashboard/views/indexJson.pug
+++ b/softwerkskammer/lib/dashboard/views/indexJson.pug
@@ -10,6 +10,8 @@ block scripts
 block title
   | Dashboard
 block content
+  h1 #{t('dashboard.dashboard')}
+  !=t('dashboard.description', { postProcess: 'pug' })
   .row
     .col-sm-6
       +my_activities
