issue 1146 - added bootstraps clearfix style class for the list-group-item in the dashboard page to avoid the group labels to get out of the surrounding cell

--- a/softwerkskammer/lib/dashboard/views/index.pug
+++ b/softwerkskammer/lib/dashboard/views/index.pug
@@ -52,7 +52,7 @@ mixin my_activities
     ul.list-group
       each activity in activities
         -var angemeldet = (member && activity.allRegisteredMembers().indexOf(member.id()) > -1)
-        li.list-group-item
+        li.list-group-item.clearfix
           if (angemeldet)
             i.fa.fa-check.fa-fw.text-success.tooltipify(data-toggle='tooltip', title=t('activities.tooltip.registered'))
           else
