--- a/softwerkskammer/lib/dashboard/views/indexJson.pug
+++ b/softwerkskammer/lib/dashboard/views/indexJson.pug
@@ -10,12 +10,13 @@ block scripts
 block title
   | Dashboard
 block content
-  h1 #{t('dashboard.dashboard')}
-  !=t('dashboard.description', { postProcess: 'pug' })
-  .row
-    .col-sm-6
-      +my_activities
-  +my_groups
+  .page-header
+    h2 #{t('dashboard.dashboard')}
+    !=t('dashboard.description', { postProcess: 'pug' })
+    .row
+      .col-sm-6
+        +my_activities
+    +my_groups
 
 mixin mailIndex(mailHeaders)
   if (mailHeaders)
