--- a/softwerkskammer/lib/dashboard/views/indexJson.pug
+++ b/softwerkskammer/lib/dashboard/views/indexJson.pug
@@ -12,11 +12,12 @@ block title
 block content
   .page-header
     h2 #{t('dashboard.dashboard')}
-    !=t('dashboard.description', { postProcess: 'pug' })
-    .row
-      .col-sm-6
-        +my_activities
-    +my_groups
+      small
+        !=t('dashboard.description', { postProcess: 'pug' })
+  .row
+    .col-sm-6
+      +my_activities
+  +my_groups
 
 mixin mailIndex(mailHeaders)
   if (mailHeaders)
