--- a/softwerkskammer/lib/activities/views/activities-mixins.pug
+++ b/softwerkskammer/lib/activities/views/activities-mixins.pug
@@ -1,5 +1,5 @@
-mixin subscriptionButtons(activity, resourceName, resourceRegistrationRenderer)
-  -var result = resourceRegistrationRenderer.htmlRepresentationOf(activity, resourceName, accessrights.memberId())
+mixin subscriptionButtons(activity, resourceRegistrationRenderer)
+  -var result = resourceRegistrationRenderer.htmlRepresentationOf(activity, accessrights.memberId())
   -var btnClass = result.isWithdrawal() ? 'btn-default' : 'btn-primary'
   if (activity.resourceNames().length === 1)
     if (!result.representsButton())
@@ -10,19 +10,6 @@ mixin subscriptionButtons(activity, resourceName, resourceRegistrationRenderer)
         +hidden('url', result.url)
         +hidden('resource', result.resourcename)
         button.btn(type='submit', class=btnClass) #{t(result.displayText)}
-  else
-    .form-horizontal
-      .form-group
-        label.control-label.col-xs-6(style='text-align: left;') #{resourceName}:
-        if (!result.representsButton())
-          span.col-xs-6.control-label(style='text-align: center;') #{t(result.displayText)}
-        else
-          span.col-xs-6
-            form(role='form', method='POST', action=result.type)
-              +csrf
-              +hidden('url', result.url)
-              +hidden('resource', result.resourcename)
-              button.btn(type='submit', class=btnClass) #{t(result.displayText)}
 
 mixin activityList(activities, member)
   dl.dl-horizontal
