--- a/softwerkskammer/lib/activities/views/activities-forms.pug
+++ b/softwerkskammer/lib/activities/views/activities-forms.pug
@@ -45,6 +45,7 @@ mixin activityform(activity, groups, editorNames, participantNames)
       .row
         .col-md-12
           #resources
+            -var resource = activity.veranstaltung()
             .row
               .col-xs-3
                 +controlLabel('anzahl', t('activities.count'), t('activities.tooltip.count'))
@@ -54,24 +55,22 @@ mixin activityform(activity, groups, editorNames, participantNames)
                 +controlLabel('registrierung', t('activities.deregistration'), t('activities.tooltip.deregistration'))
               .col-xs-3
                 +controlLabel('registrierung', t('activities.waitinglist'), t('activities.tooltip.waitinglist'))
-            each name in activity.resourceNames()
-              -var resource = activity.resourceNamed(name)
-              +hidden('resources[names]', name)
-              .row.form-group
-                .col-xs-3
-                  input.form-control(name='resources[limits]', value=resource.limit(), type='text', placeholder=t('activities.unlimited'))
-                .col-xs-3
-                  select.form-control(name='resources[isRegistrationOpen]')
-                    option(value='yes', selected=(resource.isRegistrationOpen())) #{t('activities.possible')}
-                    option(value='no', selected=(!resource.isRegistrationOpen())) #{t('activities.impossible')}
-                .col-xs-3
-                  select.form-control(name='resources[canUnsubscribe]')
-                    option(value='yes', selected=resource.canUnsubscribe()) #{t('activities.possible')}
-                    option(value='no', selected=!resource.canUnsubscribe()) #{t('activities.impossible')}
-                .col-xs-3
-                  select.form-control(name='resources[hasWaitinglist]')
-                    option(value='yes', selected=resource.hasWaitinglist()) #{t('general.yes')}
-                    option(value='no', selected=!resource.hasWaitinglist()) #{t('general.no')}
+            +hidden('resources[names]', name)
+            .row.form-group
+              .col-xs-3
+                input.form-control(name='resources[limits]', value=resource.limit(), type='text', placeholder=t('activities.unlimited'))
+              .col-xs-3
+                select.form-control(name='resources[isRegistrationOpen]')
+                  option(value='yes', selected=(resource.isRegistrationOpen())) #{t('activities.possible')}
+                  option(value='no', selected=(!resource.isRegistrationOpen())) #{t('activities.impossible')}
+              .col-xs-3
+                select.form-control(name='resources[canUnsubscribe]')
+                  option(value='yes', selected=resource.canUnsubscribe()) #{t('activities.possible')}
+                  option(value='no', selected=!resource.canUnsubscribe()) #{t('activities.impossible')}
+              .col-xs-3
+                select.form-control(name='resources[hasWaitinglist]')
+                  option(value='yes', selected=resource.hasWaitinglist()) #{t('general.yes')}
+                  option(value='no', selected=!resource.hasWaitinglist()) #{t('general.no')}
 
       .row
         .col-md-12
