--- a/softwerkskammer/lib/dashboard/views/indexJson.pug
+++ b/softwerkskammer/lib/dashboard/views/indexJson.pug
@@ -13,7 +13,7 @@ block content
   .page-header
     h2 #{t('dashboard.dashboard')}
       small
-        !=t('dashboard.description', { postProcess: 'pug' })
+        p #{t('dashboard.description')}
   .row
     .col-sm-6
       +my_activities
@@ -42,6 +42,7 @@ mixin mailattributes(mailHeader)
   .clearfix
 
 mixin my_groups
+  h3 #{t('dashboard.your_groups')}
   .row
     each groups in groupsPerColumn
       .col-sm-4
@@ -67,7 +68,7 @@ mixin my_groups
 mixin my_activities
   .panel.panel-default
     .panel-heading
-      b #{t('activities.upcoming_activities')}
+      b #{t('dashboard.upcoming_activities')}
     ul.list-group
       each activity in activities
         -var angemeldet = (memberId && activity.allRegisteredMembers.indexOf(memberId) > -1)
