--- a/socrates/lib/registration/views/participate.pug
+++ b/socrates/lib/registration/views/participate.pug
@@ -1,9 +1,9 @@
+extends ../../../views/layout
+
 include  ../../../views/formComponents
 include ../../members/views/userinfoform
 include participationinfoform
   
-extends ../../../views/layout
-
 block scripts
   script(src='/clientscripts/check-memberform.js')
   script(src='/clientscripts/check-socrates-memberform.js')
@@ -32,7 +32,7 @@ block content
         +hidden('activityUrl', registrationTuple.activityUrl)
         +hidden('roomType', registrationTuple.roomType)
         +hidden('duration', registrationTuple.duration)
-        +hidden('desiredRoomTypes', registrationTuple.desiredRoomTypes)
+        +hidden('desiredRoomTypes', registrationTuple.desiredRoomTypes.toString())
         fieldset
           +memberinfoform(member, subscriber, 'members.edit_registration', allCountries)
           +userinfoform(addon, participation, registrationTuple.roomType && registrationTuple.roomType.indexOf('bed_in_') > -1)
