--- a/socrates/lib/registration/views/participationinfoform.pug
+++ b/socrates/lib/registration/views/participationinfoform.pug
@@ -49,50 +49,42 @@ mixin participationinfoform(roomOptions, registration)
               thead
                 tr
                   th Room until
-                  th.text-center Sat evening
-                  th.text-center Sun morning
-                  th.text-center Sun evening*
-                  th.text-center Mon morning*
+                  th.text-center
+                    .radio-inline
+                      label
+                        input(type='radio', name='nightsOptions', value='2')
+                        b Sat evening
+                  th.text-center
+                    .radio-inline
+                      label
+                        input(type='radio', name='nightsOptions', value='3')
+                        b Sun morning
+                  th.text-center
+                    .radio-inline
+                      label
+                        input(type='radio', name='nightsOptions', value='4')
+                        b Sun evening*
+                  th.text-center
+                    .radio-inline
+                      label
+                        input(type='radio', name='nightsOptions', value='5')
+                        b Mon morning*
               tbody
                 for option in roomOptions
-                  if option.displayRegistrationCheckboxes
-                    tr
-                      th #{option.name}
-                      td.text-center
-                        .radio-inline
-                          label
-                            input(type='radio', name='nightsOptions', value=option.id + ',2')
-                            | #{option.two}&nbsp;€
-                      td.text-center
-                        .radio-inline
-                          label
-                            input(type='radio', name='nightsOptions', value=option.id + ',3')
-                            | #{option.three}&nbsp;€
-                      td.text-center
-                        .radio-inline
-                          label
-                            input(type='radio', name='nightsOptions', value=option.id + ',4')
-                            | #{option.threePlus}&nbsp;€
-                      td.text-center
-                        .radio-inline
-                          label
-                            input(type='radio', name='nightsOptions', value=option.id + ',5')
-                            | #{option.four}&nbsp;€
-                  else
-                    tr
-                      th #{option.name}
-                        .radio-inline.pull-right
-                          label
-                            input(type='checkbox', name='nightsOptions', value=option.id + ',waitinglist')
-                            |  Waitinglist
-                      td.text-center.disabled-text
-                        span(style='margin-left:20px;') #{option.two}&nbsp;€
-                      td.text-center.disabled-text
-                        span(style='margin-left:20px;') #{option.three}&nbsp;€
-                      td.text-center.disabled-text
-                        span(style='margin-left:20px;') #{option.threePlus}&nbsp;€
-                      td.text-center.disabled-text
-                        span(style='margin-left:20px;') #{option.four}&nbsp;€
+                  tr
+                    th
+                      .radio-inline
+                        label
+                          input(type='checkbox', name='roomsOptions', value=option.id)
+                          b &nbsp; #{option.name}
+                    td.text-center
+                      span(style='margin-left:20px;') #{option.two}&nbsp;€
+                    td.text-center
+                      span(style='margin-left:20px;') #{option.three}&nbsp;€
+                    td.text-center
+                      span(style='margin-left:20px;') #{option.threePlus}&nbsp;€
+                    td.text-center
+                      span(style='margin-left:20px;') #{option.four}&nbsp;€
 
         .row(style='margin-top:-15px; margin-bottom:15px')
           .col-xs-12
